lemaradtak commit