@@ -1,10 +1,10 @@
 package gyakorlás;
 
 
-import java.util.List;
+import java.util.*;
 
-public class Employee {
-    private double s;
+public class Employee implements Comparable<Employee>{
+    private int s;
 
     public Employee(double salary) {
         this.s = s;
@@ -15,13 +15,25 @@ public class Employee {
     }
 
 
+    @Override
+    public int compareTo(Employee o) {
+        return s - o.s;
+    }
+
     public static void main(String[] args) {
 
         double c = 100000000.5;
 
-    List<String> names = List.of("Ernő", "Berni", "Joci");
+    List<String> names = new ArrayList<>(Arrays.asList("csumi", "lali", "berni", "joci", "humi"));
+    Set<String> names2 = new HashSet<>(names);
 
-        System.out.println(names.isEmpty());
+        System.out.println(names);
+    System.out.println(Collections.binarySearch(names, "lali"));
+
+
+
+
+
 
 
 
